UI/css/menu.css
  /* Styling for the Menu Sectionof the Webpage*/
  #menuItems {
    margin: auto;
    margin-bottom: 40px;
    margin-top: 40px;
    max-width: 80%;
    max-height: 90%;
    background: rgba(32, 22, 22, 0.7);
    border-radius: 10px;
    padding-top: 20px;
  }
  
  #item {
    width: 150px;
    height: 300px;
    display: flex;
    flex-direction: column;
    margin-left: 46px;
    margin-Right: 46px;
    margin-bottom: -50px;
  }
  #cartElement> #item{
    margin-left: 0px;
    margin-Right: 0px;
  }
  
  #itemsList {
    margin: auto;
    width: 90%;
    height: 90%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap-reverse;
  }
  
  #description {
    background-color: rgb(226, 226, 206);
    flex: unset;
    color: black;
    font-family: sofia;
    text-align: center;
    border-radius: 5px;
    font-weight: bold;
    font-size: 14px;
  }
  
  #addToCartBtn{
    width: auto;
    padding: 6px;
    background-color: rgb(13, 148, 141);
    border-radius: 10px;
  }
  
  #itemLogo {
    height: 115px;
    padding: 2px;
    background: white;
    border-radius: 5px;
  }
  
  #cart {
    height: 18px;
    display: flex;
    color: #ffffff;
  }
  
  #cart img {
    float: left;
    height: 20px;
    padding-left: 5px;
  }
  
  #fast {
    position: absolute;
    font-size: 40px;
    color: white;
    margin-top: 40px;
    margin-left: -20px;
    border-radius: 10px;
  }
  
  div.content {
    margin-left: 200px;
    padding: 1px 16px;
    height: 1000px;
    color: white;
  }
   
  #fieldsetA{
    margin: auto;
    height: 90%;
    width: 90%;
    background-color: rgba(51, 51, 51, 0);
    text-align: center;
    margin-bottom: 140px;
  }
  
  #fieldsetB{
    text-align: center;
    margin: auto;
    width: 95%;
    height: max-content;
    color: #e9e9e9;
    font-size: 18px;
    background: rgba(53, 32, 32, 0.7);
    border-radius: 5px;
    margin-bottom: 5px;
    font-weight: bold;
    padding: 10px;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  }
  
  #informationFields{
    margin-top: 20px;
    height: max-content;
    text-align: center
  }
  
  #information{
    color: #e9e9e9;
    font-size: 18px;
    background: rgba(0, 0, 0, 0.7);
    border-radius: 5px;
    height: max-content;
    text-align: center;
    height: 100%;
    width: 100%;
  }
  #information > div{
    padding: 10px;
  }
  
  

